# pHuff

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  pHuffCounter.h  pHuffDecoder.h  pHuffEncoder.h  pHuffStream.h  pHuffTreeBuilder.h  pHuffWriter.h  seqAnalyzer.h  utils.h
src/: CMakeLists.txt  main.cpp  pHuffCounter.cpp  pHuffEncoder.cpp  pHuffWrite.cpp  seqAnalyzer.cpp
test/: CMakeLists.txt  perftest_BitPacking.cpp  test_pHuffTreeBuilder.cpp
